--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
                 </div>
             </div>
         </nav>
+
+        <main class="rounded">
+            <div id="fotosmain" class="carousel carousel-dark slide w-50 m-auto mt-4" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#fotosmain" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#fotosmain" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#fotosmain" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="src/imágenes/mi nena/teqmo.png" class="d-block w-100" alt="Un dibujo de mi niña">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Dibujito de mi nena</h5>
+                            <p>Este es un dibujo que me hizo mi nena una vez mientras controlaba mi computadora con Anydesk en el paint jiji</p>
+                          </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#fotosmain" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#fotosmain" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+            </div>
+        </main>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
   </body>
 </html>
